css/chromatico.css
@import url(http://fonts.googleapis.com/css?family=Varela+Round);

html,
body {
    font-family: Varela Round;
    font-size: 12px;
    margin: 0px;
    padding: 0px;
    height: 100%;
}

#theContainer {
    height: 100%;
    width: 100%;
    padding: 0px;
    margin: 0px;
    position: relative;
}

#theHeader {
    margin-bottom: 24px;
    width: 200px;
    height: 32px;
    background: url(../img/sprites.png);
    background-position: 0px 0px;
}

#thePage {
    position:absolute;
    top: 50%;
    height:540px;
    margin-top: -270px;
    left: 50%;
    width: 800px;
    margin-left: -400px;
}

#displayArea {
    width: 100%;
    height: 100%;
    background-color: #ccc;
    background-image: url('../img/bgtile.png');
    background-repeat: repeat;
}

#theCanvas {
    position: relative;
    box-shadow: 3px 3px 30px black;
}

#theSidebar {
    position: absolute;
    top: 0px;
    right: 0px;
    width: 200px;
    background-color: rgba(51, 51, 51, .8);
    padding: 20px;
    border-bottom-left-radius: 8px;
    color: white;
}

#colorsAndSliders {
    text-align: right;
}

#theColors {
	padding: 0px;
	width: 120px;
    margin: 0px;
    float: left;
}

#theColors li {
	padding: 10px 5px 10px 15px;
	list-style-type: none;
	font-weight: bold;
	font-size: 12px;
	text-align: right;
	width: 100px;
    position: relative;
}

#theColors li span {
    text-transform: uppercase;
}

.light {
    color: #ccc;
}

.dark {
    color: #000;
}

#colorButtons {
    float: right;
}

#colorSliders {
    clear: both; 
    padding: 24px 0px 14px 0px;
}

#colorSliders div.ui-slider {
    border: 0px;
    border-top: 1px solid white;
    border-radius: 0px;
    background: none;
}

#colorSliders a.ui-slider-handle {
    width: 12px;
    height: 12px;
    background-image: url('../img/arrow.png');
    background-color: transparent;
    border: none;
    margin-top: 3px;
    margin-left: -6px;
}

#sizeMenu {
    width: 200px;
}

#customSize {
    display: inline;
    font-family: Varela Round;
    font-size: 14px;
    line-height: 30px;
}

#customSize input {
    font-family: Varela Round;
    font-size: 14px;
    text-align: right;
    width: 40px;
    background: transparent;
    color: white;
    border-width: 0px 0px 2px 0px;
}

#customSize .theX {
    margin: 0px 14px 0px 14px;
}

button#clearCustomSize {
    width: 32px;
    height: 32px;
    padding: 0px;
    margin: 0px 0px 0px 14px;
    vertical-align: middle;
    background-color: transparent;
    border: 0px;
    background-image: url(../img/sprites.png);
    background-position: -256px -32px;
}

button#clearCustomSize:hover {
    background-position: -256px -64px;
}

#theFooter {
    position: absolute;
    right: 10px;
    bottom: 10px;
}

#theFooter div {
    color: #ccc;
    font-size: 12px;
    text-align: right;
}

#theFooter a {
    text-decoration: none;
    color: #fff;
}

#colorControls {
    display: none;
    position: absolute;
    height: 30px;
    padding: 2px;
    text-align: left;
}

#expS, #expV {
/*    height: 10px;*/
    margin: 2px 0px 15px 0px;
}

/*#expS a, #expV a {*/
/*    height: 16px;*/
/*}*/

#theButtons {
    margin: 14px 0px 0px 0px;
}

#theButtons button {
    width: 62px;
    height: 62px;
    background-image: url(../img/sprites.png);
    background-color: transparent;
    border: 0px;
    border-radius: 2px;
    margin: 0px;
    padding: 0px;
}

button#shuffle {
    background-position: 0px -32px;
}

button#shuffle:hover {
    background-position: 0px -96px;
}

button#shuffle:active {
    background-position: 1px -95px;
}

button#recompose {
    background-position: -64px -32px;
    margin: 0px 3px 0px 3px;
}

button#recompose:hover {
    background-position: -64px -96px;
}

button#recompose:active {
    background-position: -63px -95px;
}

button#download {
    background-position: -128px -32px;
}

button#download:hover {
    background-position: -128px -96px;
}

button#download:active {
    background-position: -127px -95px;
}

#colorButtons button,
#colorControls button {
    width: 32px;
    height: 32px;
    background-color: transparent;
    border: 0px;
    border-radius: 2px;
    background-image: url(../img/sprites.png);
}

#colorButtons button:disabled {
    opacity: .5;
}

button#fewerColors {
    background-position: -192px -32px;
}

button#fewerColors:hover {
    background-position: -192px -64px;
}

button#moreColors {
    background-position: -224px -32px;
}

button#moreColors:hover {
    background-position: -224px -64px;
}

button#newColor {
    background-position: -288px -32px;
}

